* Added support for a "customtags" attribute in items.xml - a space-separated list of tags that can be checked with ItemConfigItem:HasCustomTag() or ItemConfigItem:GetCustomTags()
* Added custom tag "nometronome" to items.xml to prevent items from being picked by Metronome
* Improved startup time!
/newline/
Fixes:
    * Fixed `Isaac.CreateTimer` crashing the game when setting the delay argument to 0
	* Fixed bonehearts not displaying correctly when set through players.xml
	* Fixed console custom commands starting with "help" not triggering while being eaten away by repentogon's help cmd
	* Fixed a crash that could occur if Isaac exited the Berserk! state without any remaining health with Spirit Shackles ready
	* Fix Downpour/Dross rooms generated in The Void not having any water
	* Potentially fixed reported but unreproducable instance of a trapdoor deal room variant being generated outside of floor 8
	* Fixed incorrect declaration for ItemConfig::GetTaggedItems
	* Fixed Gamma scale on the visual settings imgui menu
/newline/
v1.0.8c - 
Fixes:
* Fixed adding a callback function with an optional param to a vanilla callback that does not support optional params leading to that function never being called, where it used to previously.
* Fixed the result of Isaac.GetCallbacks() no longer having a metatable.
/newline/
v1.0.8b - 
Fixes:
* Fixed the MC_PLAYER_GET_HEALTH_TYPE callback causing the last heart to render underneath the first one.
/newline/
v1.0.8a - 
Fixes:
* Fixed issues with EntityPlayer:GetSmeltedTrinkets() and EntityPlayer:GetFootprintColor()
/newline/
v1.0.8 - 
Additions:
* New general callback improvements to address some performance issues on some scenarios
* Deal rooms can now generate variants above 100
* Add new BlendTypes CONSTANT, OVERLAY
* EntityPlayer:
	- SetHeadDirection(Direction, Time, Force)
	- Get/SetHeadDirectionLockTime
* Game:
	- SetDonationMod[Angel/Greed]
* ItemPool:
	- GetBibleUpgrades(ItemPoolType)
* Player: