@@ -1,0 +1,6 @@
+"558bec6aff68????????64a1????????5083ec54535657a1????????33c5508d45??64a3????????f30f114d":
+__thiscall void HomingLaser::CalculateSamples(float param_2<xmm1>);
+
+struct HomingLaser  {
+	unsigned int _sampleNum : 0x18;
+} : 0x54;
